@@ -42,32 +42,36 @@ buildscript {
 }
 
 dependencies {
-  compile 'org.apache.lucene:lucene-core:5.3.0-mobile-2'
-  compile 'org.apache.lucene:lucene-queryparser:5.3.0-mobile-2'
-  compile 'org.apache.lucene:lucene-analyzers-common:5.3.0-mobile-2'
-  compile 'org.apache.lucene:lucene-suggest:5.3.0-mobile-2'
-  compile 'org.apache.lucene:lucene-highlighter:5.3.0-mobile-2'
-  compile 'org.json:json:20140107'
+  implementation 'org.apache.lucene:lucene-core:5.3.0-mobile-2'
+  implementation 'org.apache.lucene:lucene-queryparser:5.3.0-mobile-2'
+  implementation 'org.apache.lucene:lucene-analyzers-common:5.3.0-mobile-2'
+  implementation 'org.apache.lucene:lucene-suggest:5.3.0-mobile-2'
+  implementation 'org.apache.lucene:lucene-highlighter:5.3.0-mobile-2'
+  implementation 'org.json:json:20140107'
 
   // Transient depedencies: if these are not fetched via Maven, we have to list them explicitly.
-  compile 'org.apache.lucene:lucene-join:5.3.0-mobile-2'
-  compile 'org.apache.lucene:lucene-memory:5.3.0-mobile-2'
-  compile 'org.apache.lucene:lucene-misc:5.3.0-mobile-2'
-  compile 'org.apache.lucene:lucene-queries:5.3.0-mobile-2'
-  compile 'org.apache.lucene:lucene-sandbox:5.3.0-mobile-2'
+  implementation 'org.apache.lucene:lucene-join:5.3.0-mobile-2'
+  implementation 'org.apache.lucene:lucene-memory:5.3.0-mobile-2'
+  implementation 'org.apache.lucene:lucene-misc:5.3.0-mobile-2'
+  implementation 'org.apache.lucene:lucene-queries:5.3.0-mobile-2'
+  implementation 'org.apache.lucene:lucene-sandbox:5.3.0-mobile-2'
 
-  testCompile 'junit:junit:4.11'
+  testImplementation 'junit:junit:4.11'
+}
+
+configurations {
+  implementationArtifacts.extendsFrom implementation
 }
 
 jar {
-  // From http://cmoz.me/blog/2014/11/service-files-uber-jars-and-gradle/
   doFirst {
+  // From http://cmoz.me/blog/2014/11/service-files-uber-jars-and-gradle/
     def serviceDir = file("$buildDir/META-INF/services")
     serviceDir.deleteDir()
     serviceDir.mkdirs()
 
     // copy all service files from deps to buildDir
-    for(file in configurations.runtime) {
+    for(file in configurations.implementationArtifacts) {
       zipTree(file).matching{ include 'META-INF/services/*' }.each { f ->
         new File(serviceDir, f.name) << f.getText("UTF-8")
       }
@@ -78,7 +82,7 @@ jar {
     attributes "Main-Class": "org.lukhnos.lucenestudy.Study"
   }
 
-  from(configurations.runtime.collect{ it.isDirectory() ? it : zipTree(it) }) {
+  from(configurations.implementationArtifacts.collect{ it.isDirectory() ? it : zipTree(it) }) {
     exclude 'META-INF/**' // Don't let Gradle merge service files
   }
 
@@ -93,7 +97,7 @@ jar {
  * See https://discuss.gradle.org/t/how-do-i-declare-a-dependency-on-a-modules-test-code/7172/9
  */
 configurations {
-  testArtifacts.extendsFrom testRuntime
+  testArtifacts.extendsFrom testRuntimeOnly
 }
 
 task testJar(type: Jar) {
@@ -105,10 +109,15 @@ artifacts {
   testArtifacts testJar
 }
 
+
 // https://github.com/loopj/proguard-gradle-example
 task proguardJar(type: proguard.gradle.ProGuardTask, dependsOn: jar) {
     configuration 'proguard-rules.pro'
     injars jar.archivePath
     outjars "$jar.destinationDir/lucenestudy-shrunk.jar"
     printusage "$project.buildDir/deadcode.txt"
+}
+
+test {
+  jvmArgs '--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED'
 }
